# systemd

./: CRYPTSETUP  TODO  TODO-HOME  fuzzbuzz.yaml  meson.build  meson_options.txt
.mkosi/: mkosi.fedora
docs/: ENVIRONMENT.md  GROUP_RECORD.md  HOME_DIRECTORY.md  UIDS-GIDS.md  USER_GROUP_API.md  USER_RECORD.md
hwdb.d/: meson.build
man/: homectl.xml  pam_systemd_home.xml  systemd-homed.service.xml  systemd-userdbd.service.xml  userdbctl.xml
man/rules/: meson.build
src/basic/: blockdev-util.c  blockdev-util.h  btrfs-util.c  btrfs-util.h  cgroup-util.c  copy.c  copy.h  errno-util.h  fileio.c  fileio.h  fs-util.c  fs-util.h  hexdecoct.c  json.c  json.h  memory-util.h  meson.build  missing_magic.h  path-util.c  path-util.h  process-util.c  process-util.h  rm-rf.h  signal-util.c  string-util.c  string-util.h  tmpfile-util.c  unit-name.c  user-util.c  user-util.h
src/cgtop/: cgtop.c
src/core/: cgroup.c  device.c  dynamic-user.c  executor.c  main.c  manager.c  manager.h  namespace.c
src/cryptsetup/: cryptsetup-pkcs11.c  cryptsetup-pkcs11.h  cryptsetup.c
src/home/: home-util.c  home-util.h  homectl.c  homed-home-bus.c  homed-home.c  homed-manager-bus.c  homed-manager.c  homed-varlink.c  homed.c  homework.c  meson.build  pam_systemd_home.c  pwquality-util.c  user-record-sign.c  user-record-util.c  user-record-util.h
src/import/: import-fs.c  import-raw.c  import-tar.c  import.c  pull-common.c  pull-job.c  pull-job.h  pull-raw.c  pull-tar.c  pull.c
src/libsystemd/: libsystemd.sym
units/: meson.build  systemd-homed.service.in  systemd-userdbd.service.in
(+78 files in other folders)
